Add csrf and approve and check whether user is owner

--- a/app/views/cat_rental_requests/new.html.erb
+++ b/app/views/cat_rental_requests/new.html.erb
@@ -2,6 +2,10 @@
 <h2> Cats </h2>
 
 <form method="POST" action="<%=cat_rental_requests_url%>">
+  <input
+    type="hidden"
+    name="authenticity_token"
+    value="<%= form_authenticity_token %>">
 
  <select name="cat_rental_request[cat_id]" id="cat_name"%>>
 <% @cats.each do |cat| %>
