--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -4,6 +4,11 @@
 
 <form method="POST" action="<%= action_url %>">
   <input type="hidden" name="_method" value="<%= form_method %>">
+  <input
+  type="hidden"
+  name="authenticity_token"
+  value="<%= form_authenticity_token %>">
+
 
 <h2> Name </h2>
 <input type="text" name="cat[name]" value= <%= cat.name %>>
