--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,9 @@
 <form class="" action="<%=users_url%>" method="post">
+  <input
+  type="hidden"
+  name="authenticity_token"
+  value="<%= form_authenticity_token %>">
+
   <label for="user_user_name"> Username </label>
   <input type="text" name=user[user_name] id="user_user_name" value=<%= @user.user_name %>>
 
